--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DB_USER=postgres
-DB_HOST=localhost
-DB_DATABASE=users
-DB_PASSWORD=password
+DB_USER=susmita
+DB_HOST=dpg-crms39a3esus7382itjg-a
+DB_DATABASE=users_rfe6
+DB_PASSWORD=dDXdZwNS6IBrD2iDQ7O7F8TleMnJw3ka
 DB_PORT=5432
 PORT=5000
